# 42_Python

./: .gitignore
M_00/ex01/: ft_garden_name.py
M_00/ex02/: ft_plot_area.py
M_00/ex03/: ft_harvest_total.py
M_00/ex04/: ft_plant_age.py
M_00/ex05/: ft_water_reminder.py
M_00/ex06/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
M_00/ex07/: ft_seed_inventory.py
M_01/ex0/: ft_garden_intro.py
M_01/ex1/: ft_garden_data.py
M_01/ex2/: ft_plant_growth.py
M_01/ex3/: ft_plant_factory.py
M_01/ex4/: ft_garden_security.py
M_01/ex5/: ft_plant_types.py
M_01/ex6/: ft_garden_analytics.py
M_2/ex0/: ft_first_exception.py
M_2/ex1/: ft_raise_exception.py
M_2/ex2/: ft_different_errors.py
M_2/ex3/: ft_custom_errors.py
M_2/ex4/: ft_finally_block.py
M_3/: log.txt
M_3/ex0/: ft_command_quest.py
M_3/ex1/: ft_score_analytics.py
M_3/ex2/: ft_coordinate_system.py
M_3/ex3/: ft_achievement_tracker.py
M_3/ex4/: ft_inventory_system.py
M_3/ex5/: ft_data_stream.py
M_3/ex6/: ft_data_alchemist.py
M_4/ex0/: ft_ancient_text.py
M_4/ex1/: ft_archive_creation.py
M_4/ex2/: ft_stream_management.py
M_4/ex3/: ft_vault_security.py
M_5/ex0/: data_processor.py
M_5/ex1/: data_stream.py
M_6/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
M_7/: battle.py  capacitor.py  tournament.py
M_8/ex1/: loading.py  pyproject.toml  requirements.txt
(+25 files in other folders)
