[project]
name = "loading"
version = "1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = "n"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
